v.0.2.1

- bugfix: remove knot-install.php after installation


v.0.2.0

- renamed to 'Knot Installer' (was: 'Homestead Installer')
- updated GitHub urls and names of the knot modules


v.0.1.6

- this module is now named 'homestead-installer' (was only 'homestead')
- on install, set indieauth-metadata for eigenheim, instead of authorization_endpoint and token_endpoint
- moved all relevant code for the installer into one php file
- also install new module homestead-control
- removed updater, this is now part of the new 'homestead-control' module


v.0.1.5

- install 'einwohnermeldeamt' as the authorization & token endpoint
- bugfixes & enhancements


v.0.1.4

- better compatibility for some server configurations
- bugfixes & enhancements

Installer
- check, if some required extensions (like GD, CURL, SimpleXML, DOM) are installed
- check, if the config file was created

Updater
- only update selected modules, instead of all modules


v.0.1.3

Installer
- allow installing of unstable dev version
- add comments to .htaccess, at beginning and end of our block
- bugfixes & enhancements


v.0.1.2

Updater
- fix for displaying relevant release information for Homestead update


v.0.1.1

Updater
- added basic updater to update Homestead or the installed modules (the modules need to be at least at version 0.1.1 for the version-select-dropdown to work)

Installer
- added instructions about changing the domain


v.0.1.0

- initial release